--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <section class="top-banner">
     <div class="container">
       <center>
-        <img src="https://d1psgljc389n8q.cloudfront.net/bootcamps/logos/VX6tpIUJa" alt="Bank logo" class="nav__logo"
+        <img src="./img/pngegg (7).png" class="nav__logo"
           id="logo" />
           <h1 class="heading">
-            Weather App</h1>
+            Weather ForeCast</h1>
       </center>
       <form>
         <input type="text" placeholder="Search for a city" autofocus>
@@ -34,8 +34,7 @@
   </section>
   <footer class="page-footer">
     <div class="container">
-      <small>Coded by <span>❤</span>FS Team
-      </small>
+ 
     </div>
   </footer>
   <script src="./js/weather.js"></script>
