--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="top-banner">
     <div class="container">
       <center>
-        <img src="./img/pngegg (7).png" class="nav__logo"
+        <img src="./img/weather.png" class="nav__logo"
           id="logo" />
           <h1 class="heading">
             Weather ForeCast</h1>
